lex/src/snapshots/luar_lex__token__tests__string_literal.snap
---
source: luar_lex/src/token.rs
expression: tokens
---
[
    String(
        StringLiteral(
            "hello world \n \"nope\"",
        ),
    ),
]
